--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
   --color-bg: #ffffff;
   --color-text-main: #212121;
   --color-text-header: #212121;
-  --wrapper-height: 87vh;
 }
 
 * {
@@ -17,36 +16,47 @@ body {
   background-color: var(--color-bg);
 }
 
-.wrapper{
+section {
+  width: 100vw;
+  height: 100vh;
+}
+
+.main-wrapper, .landing-wrapper{
   padding: 0px 100px;
+}
+
+.landing-content{
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh;
 }
 
 .header, .description {
   position: sticky;
-  top: 17px;
+  top: 20px;
+  z-index: 1000;
 }
 
 .description {
   align-self: start; 
 }
 
-
-#goToTop {
-  border: none;
-  cursor: pointer;
-  z-index: 1000;
-  background-color: transparent;
-  color: var(--color-text-header);        
-  transition: opacity 0.3s ease;
-}
-
 h1 {
-  font-size: 48px;
+  font-size: 60px;
   font-family: "parabolica", sans-serif;
   font-weight: 400;
   font-style: normal;
   letter-spacing: -0.04em;
 
+}
+
+h2 {
+  font-size: 40px;
+  font-family: "parabolica", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: -0.04em;
 }
 
 .gallery {
@@ -57,10 +67,7 @@ h1 {
 }
 
 .footer {
-  position: sticky;
-  bottom: -100;
-  padding: 10px;
-  text-align: center;
+  padding: 10px 0px;
 }
 
 .gallery img,
@@ -69,7 +76,7 @@ h1 {
   height: auto;
 }
 
-h2 {
+h3 {
   display: inline;
   font-family: 'Geist', sans-serif;
   font-weight: 700;
@@ -78,7 +85,7 @@ h2 {
   line-height: 1;
 }
 
-p, button, h3 {
+p, h4 {
   font-family: monospace, sans-serif;
   font-style: normal;
   font-size: 12px;
@@ -95,7 +102,7 @@ a {
   color: #212121;
 }
 
-h3 {
+h4 {
   color: #7f7f7f;
   text-align: center;
 }
@@ -123,7 +130,7 @@ h3 {
     display: block;
   }
 
-  .wrapper {
+  .main-wrapper, .landing-wrapper {
     display: none;
   }
 }
