--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ h1 {
 
 }
 
+#goToTop {
+  cursor: pointer;
+}
+
 h2 {
   font-size: 40px;
   font-family: "parabolica", sans-serif;
@@ -104,7 +108,6 @@ a {
 
 h4 {
   color: #7f7f7f;
-  text-align: center;
 }
 
 .mobile-warning {
