--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,30 @@ section {
   z-index: 1000;
 }
 
+.header {
+  display: grid;
+  grid-template-columns: 7fr 1fr;
+}
+
+.bracket-links {
+  display: flex;
+  align-items: flex-start; 
+}
+
+.header h2,
+.header a {
+  margin-top: 0; 
+  text-decoration: none;
+  color: #212121;
+}
+
+.header a p {
+  line-height: 1;
+}
+
 .description {
+  position: sticky;
+  top: 90px;
   align-self: start; 
 }
 
@@ -84,12 +107,20 @@ h2 {
   row-gap: 10px;
 }
 
+.about {
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 10px; 
+  row-gap: 10px;
+}
+
 .footer {
   padding: 10px 0px;
 }
 
 .gallery img,
-.gallery video {
+.gallery video,
+.about img {
   width: 100%;
   height: auto;
 }
@@ -114,10 +145,6 @@ p, h4 {
   display: grid;
   grid-template-columns: 2fr 1fr;
   column-gap: 10px;
-}
-
-a {
-  color: #212121;
 }
 
 h4 {
