--- a/css/style.css
+++ b/css/style.css
@@ -151,30 +151,33 @@ h4 {
   color: #7f7f7f;
 }
 
-.mobile-warning {
-  display: none;
-  background: white;
-  color: black;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 100%;
-  padding: 2rem;
-  text-align: center;
-  font-size: 1.2rem;
-  line-height: 1.5;
-  box-sizing: border-box;
-}
-
-/* Show warning on screens narrower than 768px (phones/tablets) */
 @media (max-width: 768px) {
-  .mobile-warning {
-    display: block;
+  .header {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
   }
 
-  .main-wrapper, .landing-wrapper {
+  .content {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
+  p, h4 {
+  font-size: 10px;
+  }
+
+  .asset-desc {
     display: none;
+  }
+
+  .main-wrapper, .landing-wrapper{
+    padding: 0px 10px;
   }
 }
