that's right, i'm mike mobile

--- a/css/style.css
+++ b/css/style.css
@@ -168,12 +168,13 @@ h4 {
   h1 {
     font-size: 48px;
   }
+
   .header {
     display: grid;
     grid-template-columns: 2fr 1fr;
   }
 
-  h2 {
+  h2, #Thats-Right, #Im-Mike {
     font-size: 30px;
   }
 
