--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h3 {
   line-height: 1;
 }
 
-p, h4, #toggleBtn  {
+p, h4, #toggleBtn, #topBtn {
   font-family: monospace, sans-serif;
   font-style: normal;
   font-size: 12px;
@@ -151,17 +151,17 @@ p, h4, #toggleBtn  {
   column-gap: 10px;
 }
 
-h4, h4 a, #toggleBtn {
+h4, h4 a, #toggleBtn, #topBtn {
   text-decoration: none;
   color: var(--color-text-grey);
 }
 
-a:hover, #toggleBtn:hover, h2:hover {
+a:hover, #toggleBtn:hover, h2:hover, #topBtn:hover {
   opacity: 0.5;
   transition: opacity 0.2s ease;
 }
 
-#toggleBtn {
+#toggleBtn, #topBtn {
   text-transform: uppercase;
   margin: 0px;
   padding: 0px;
@@ -196,7 +196,7 @@ a:hover, #toggleBtn:hover, h2:hover {
     font-size: 16px;
   }
 
-  p, h4, #toggleBtn {
+  p, h4, #toggleBtn, #topBtn {
   font-size: 10px;
   }
 
